[package]
edition = "2018"
name = "consensus-geo-pow"
version = "0.0.1"
description = "PoW consensus algorithm for substrate adapted for geo location"
readme = "README.md"

[dependencies]
codec = { version = "2.0.0", features = ["derive"], package = "parity-scale-codec" }
derive_more = "0.99.2"
futures = { version = "0.3.1", features = ["compat"] }
futures-timer = "3.0.1"
log = "0.4.8"
parking_lot = "0.11.1"
prometheus-endpoint = { version = "0.9.0", package = "substrate-prometheus-endpoint" }
sc-client-api = "3.0.0"
sp-api = "3.0.0"
sp-block-builder = "3.0.0"
sp-blockchain = "3.0.0"
sp-consensus = "0.9.0"
sp-consensus-pow = "0.9.0"
sp-core = "3.0.0"
sp-inherents = "3.0.0"
sp-runtime = "3.0.0"
sp-timestamp = "3.0.0"
