[package]
name = 'basic-pow'
version = "3.0.0"
edition = '2018'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
description = 'A Substrate node that demonstrates minimal proof of work consensus'
license = "GPL-3.0-or-later"

[[bin]]
name = 'basic-pow'
path = 'src/main.rs'

[dependencies]
jsonrpc-core = '15.1.0'
jsonrpc-core-client = "15.0"
jsonrpc-derive = "15.0"
futures = '0.3.4'
rand = { version = "0.7.2", features = ["small_rng"] }
sha3 = "0.8.0"
structopt = '0.3.8'
sp-std = '4.0.0'
log = "0.4.17"
public-ip = "0.2.2"

# Substrate packages
sc-basic-authorship = '0.9'
sc-cli = '0.9'
sc-client-api = '3.0'
sc-consensus = '0.9'
sc-consensus-manual-seal = '0.9'
sc-rpc = '3.0'
sc-rpc-api = '0.9'
sp-block-builder = '3.0'
consensus-geo-pow = { path = '../../consensus/pow' }
sc-executor = '0.9'
sc-network = '0.9'
sc-service = '0.9'
sc-transaction-pool = '3.0'
sp-api = '3.0'
sp-blockchain = '3.0'
sp-consensus = '0.9'
sp-core = '3.0'
sp-inherents = '3.0'
sp-runtime = '3.0'
sp-rpc = { version = '3.0', default-features = false}
sp-timestamp = '3.0'
sp-transaction-pool = '3.0'
pallet-contracts  = '3.0.0'
pallet-contracts-rpc  = '3.0.0'

# local packages
sha3pow = { path = '../../consensus/sha3pow' }

# This node is compatible with any of the runtimes below
# ---
# Common runtime configured with most Recipes pallets.
runtime = { package = "super-runtime", path = "../../runtimes/super-runtime" }

# sum-storage-rpc = { path = "../../pallets/sum-storage/rpc" }
# sum-storage-runtime-api = { path = "../../pallets/sum-storage/runtime-api" }

# Runtime with custom weight and fee calculation.
# runtime = { package = "weight-fee-runtime", path = "../../runtimes/weight-fee-runtime"}

# Runtime with custom runtime-api (custom API only used in rpc-node)
# runtime = { package = "api-runtime", path = "../../runtimes/api-runtime" }
# ---
substrate-frame-rpc-system = '3.0.0'
pallet-transaction-payment-rpc = '3.0.0'

[build-dependencies]
substrate-build-script-utils = '3.0'
vergen = '3.1.0'
